# 2021_machine_learning_and_data_science

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
01_analisis_y_visualizacion/00_introduccion/: 00_introduccion_a_jupyter_notebooks.html
_sources/docs/: intro.md
_sources/docs/01_analisis_y_visualizacion/00_introduccion/: 00_introduccion_a_jupyter_notebooks.ipynb
_sources/docs/01_analisis_y_visualizacion/01_unidad/: 01_lenguaje_de_programacion_python.ipynb  02_libreria_numerica_de_python_numpy.ipynb
docs/: intro.html
docs/01_analisis_y_visualizacion/00_introduccion/: 00_introduccion_a_jupyter_notebooks.html
docs/01_analisis_y_visualizacion/01_unidad/: 01_lenguaje_de_programacion_python.html  02_libreria_numerica_de_python_numpy.html
machine_learning_and_data_science/: _config.yml  _toc.yml  requirements.txt
machine_learning_and_data_science/docs/01_analisis_y_visualizacion/01_unidad/: 02_libreria_numerica_de_python_numpy.ipynb  ejemplo.txt
