[tool.poetry]
name = "2021_machine_learning_and_data_science"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
numpy = "~1.19"
matplotlib = "~3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
